adds Cube News to code page and updates links to projects that now have readme files

--- a/code.html
+++ b/code.html
@@ -123,11 +123,20 @@
 </div>  
 
           <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
+            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="https://github.com/smithscarborough/cube-news-app" class="item-wrap fancybox" target="_blank">
+                <div class="work-info">
+                  <h3 class="project-title">Cube News</h3>
+                  <span class="project-technologies">React, React Router, Material-UI, CSS, Three.js, Context API, serverless</span>
+                </div>
+                <img class="img-fluid" src="./img/cube-news-screenshot.png">
+              </a>
+            </div>
             <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="https://github.com/smithscarborough/note" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
-                  <h3>Bulb Note</h3>
-                  <span>JavaScript, HTML, CSS, Node.js, Express.js, PostgreSQL</span>
+                  <h3 class="project-title">Bulb Note</h3>
+                  <span class="project-technologies">JavaScript, HTML, CSS, Node.js, Express.js, PostgreSQL</span>
                 </div>
                 <img class="img-fluid" src="./img/bulb_note_project_thumbnail.JPG">
               </a>
@@ -135,8 +144,8 @@
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="https://github.com/smithscarborough/FrontEndGroupProject" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
-                  <h3>WhatsGood</h3>
-                  <span>JavaScript, Bootstrap, HTML, CSS, Leaflet Maps API</span>
+                  <h3 class="project-title">WhatsGood</h3>
+                  <span class="project-technologies">JavaScript, Bootstrap, HTML, CSS, Leaflet Maps API</span>
                 </div>
                 <img class="img-fluid" src="./img/whats-good-project_thumbnail.JPG">
               </a>
@@ -144,37 +153,28 @@
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="https://github.com/smithscarborough/python-virtual-assistant" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
-                  <h3>Python Virtual Assistant</h3>
-                  <span>Python</span>
+                  <h3 class="project-title">Python Virtual Assistant</h3>
+                  <span class="project-technologies">Python</span>
                 </div>
                 <img class="img-fluid" src="./img/python_virtual_assistant_thumbnail.JPG">
-              </a>
-            </div>
-            <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="https://github.com/smithscarborough/joke-app" class="item-wrap fancybox" target="_blank">
-                <div class="work-info">
-                  <h3>Chuck Norris Joke Generator</h3>
-                  <span>React, API</span>
-                </div>
-                <img class="img-fluid" src="./img/jokes_app_screenshot.png">
               </a>
             </div>
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="https://github.com/smithscarborough/scene-it-react-redux" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
-                  <h3>Scene It</h3>
-                  <span>React, Material-UI, API, local storage</span>
+                  <h3 class="project-title">Scene It!</h3>
+                  <span class="project-technologies">React, Material-UI, API, local storage</span>
                 </div>
-                <img class="img-fluid" src="./img/scene-it-react-redux-screenshot.png">
+                <img class="img-fluid" src="./img/scene-it-screenshot.png">
               </a>
             </div>
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="https://github.com/smithscarborough/memory-game" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
-                  <h3>Memory Game</h3>
-                  <span>React</span>
+                  <h3 class="project-title">Memory Game</h3>
+                  <span class="project-technologies">React</span>
                 </div>
-                <img class="img-fluid" src="./img/memory-game-app-screenshot.png">
+                <img class="img-fluid" src="./img/memory-game-screenshot.png">
               </a>
             </div>
           </div>
