add capstone project to portfolio page

--- a/code.html
+++ b/code.html
@@ -132,6 +132,15 @@
                 <img class="img-fluid" src="./img/cube-news-screenshot.png">
               </a>
             </div>
+            <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="https://github.com/smithscarborough/Ticket-Senpai" class="item-wrap fancybox" target="_blank">
+                <div class="work-info">
+                  <h3 class="project-title">Ticket Senpai</h3>
+                  <span class="project-technologies">React, Redux, React Router, React-Bootstrap, Node.js, Express, PostgreSQL, localStorage</span>
+                </div>
+                <img class="img-fluid" src="./img/ticket-senpai-screenshot.jpg">
+              </a>
+            </div>
             <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="https://github.com/smithscarborough/note" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
@@ -139,6 +148,15 @@
                   <span class="project-technologies">JavaScript, HTML, CSS, Node.js, Express.js, PostgreSQL</span>
                 </div>
                 <img class="img-fluid" src="./img/bulb_note_project_thumbnail.JPG">
+              </a>
+            </div>
+            <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+              <a href="https://github.com/smithscarborough/python-virtual-assistant" class="item-wrap fancybox" target="_blank">
+                <div class="work-info">
+                  <h3 class="project-title">Python Virtual Assistant</h3>
+                  <span class="project-technologies">Python, SpeechRecognition, gTTS</span>
+                </div>
+                <img class="img-fluid" src="./img/python_virtual_assistant_thumbnail.JPG">
               </a>
             </div>
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -150,15 +168,6 @@
                 <img class="img-fluid" src="./img/whats-good-project_thumbnail.JPG">
               </a>
             </div>
-            <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="https://github.com/smithscarborough/python-virtual-assistant" class="item-wrap fancybox" target="_blank">
-                <div class="work-info">
-                  <h3 class="project-title">Python Virtual Assistant</h3>
-                  <span class="project-technologies">Python</span>
-                </div>
-                <img class="img-fluid" src="./img/python_virtual_assistant_thumbnail.JPG">
-              </a>
-            </div>
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="https://github.com/smithscarborough/scene-it-react-redux" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
@@ -166,15 +175,6 @@
                   <span class="project-technologies">React, Material-UI, API, local storage</span>
                 </div>
                 <img class="img-fluid" src="./img/scene-it-screenshot.png">
-              </a>
-            </div>
-            <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="https://github.com/smithscarborough/memory-game" class="item-wrap fancybox" target="_blank">
-                <div class="work-info">
-                  <h3 class="project-title">Memory Game</h3>
-                  <span class="project-technologies">React</span>
-                </div>
-                <img class="img-fluid" src="./img/memory-game-screenshot.png">
               </a>
             </div>
           </div>
