--- a/contact.html
+++ b/contact.html
@@ -124,6 +124,9 @@
     </div>
   </section>  
   </div>
+  <div class="copyright-container container justify-content-center">
+    <p class="copyright">&copy; Copyright 2021 Smith Scarborough. All Rights Reserved.</p>
+  </div>
 
     <div class="footer-flair"></div>
 
