rearrange text on ticket senpai technologies list

--- a/code.html
+++ b/code.html
@@ -136,7 +136,7 @@
               <a href="https://github.com/smithscarborough/Ticket-Senpai" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
                   <h3 class="project-title">Ticket Senpai</h3>
-                  <span class="project-technologies">React, Redux, React Router, React-Bootstrap, Node.js, Express, PostgreSQL, localStorage</span>
+                  <span class="project-technologies">React, React Router, React-Bootstrap, Redux, Node.js, Express, PostgreSQL, localStorage</span>
                 </div>
                 <img class="img-fluid" src="./img/ticket-senpai-screenshot.jpg">
               </a>
