--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <p>I am a software engineer based in Houston, Texas, with a skill set focused on fullstack web development (click <a href="./code.html">here</a> to check out some of my latest projects).  I have a degree in Creative Writing from Rhodes College in Memphis, Tennessee, as well as an MBA and a software engineering certificate from a fullstack coding bootcamp.</p>
         <p>When I'm not turning coffee into code, you can probably find me outside running, exploring Big Bend National Park (pictured above and below), or doing my best Jimi Hendrix impersonation on my surf green Fender Stratocaster.</p>
         <p>An avid runner, I competed on my college's cross country and track teams, and have completed over 20 marathons, 10x50-milers, and one 105-mile ultra-marathon.</p>
-        <p>I love the parallels between coding and ultra-running. Both are a matter of problem solving, and breaking sometimes huge-seeming obstacles down into their most basic components, until they become entirely manageable, allowing you to keep moving and reach the finish line.</p>
+        <p>I love the parallels between coding and ultra-running. Both are a matter of problem solving, and breaking down seemingly huge obstacles into their most basic components, until they become entirely manageable.  I love this process, and the feeling of success that comes from overcoming these obstacles.</p>
         <p>I would love to hear from you, so please feel free to shoot me an email or leave a comment.</p>
         <p>Thanks for stopping by!</p>
 
