change bulb note project to spotify-clone project on code page

--- a/code.html
+++ b/code.html
@@ -142,12 +142,12 @@
               </a>
             </div>
             <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="https://github.com/smithscarborough/note" class="item-wrap fancybox" target="_blank">
+              <a href="https://github.com/smithscarborough/spotify-clone-FE" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
-                  <h3 class="project-title">Bulb Note</h3>
-                  <span class="project-technologies">JavaScript, HTML, CSS, Node.js, Express.js, PostgreSQL</span>
+                  <h3 class="project-title">Spotify-by-Smith</h3>
+                  <span class="project-technologies">React, React-Bootstrap, Node.js, Express, Spotify API, CSS</span>
                 </div>
-                <img class="img-fluid" src="./img/bulb_note_project_thumbnail.JPG">
+                <img class="img-fluid" src="./img/spotify-by-smith-screenshot.png">
               </a>
             </div>
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
