--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
             <p>See my full resume <a href="https://www.linkedin.com/in/smith-scarborough/">here.</a></p>
             <h6 class="about-subheader text-center">Fun Facts</h6>
             <p>One time my car broke down the night before my first day of a new job, in a new town, and so I ended up running the 30 miles in to work that next morning.  As if that weren't enough, I did it all while carrying a backpack full of work stuff (i.e. khakis, dress shoes, toiletries, notepads, etc.).  I got the best sleep of my life that night!</p>
-            <p>In 2009, I did a Semester at Sea study abroad voyage, sailing around the world in 108-days with stops in the Bahamas, Spain, Gilbraltar, Morocco, the Canary Islands, Senegal, Namibia, South Africa, Mauritius, India, Thailand, Cambodia, Vietnam, China, Japan, Hawaii, Guatemala, and the Panama Canal.</p>
+            <p>In 2009, I did a Semester at Sea study abroad voyage, sailing around the world in 108-days with ports-of-call in the Bahamas, Spain, Gilbraltar, Morocco, the Canary Islands, Senegal, Namibia, South Africa, Mauritius, India, Thailand, Cambodia, Vietnam, China, Japan, Hawaii, Guatemala, and the Panama Canal.</p>
             <p>I love playing the guitar and learning about blues music history.  I once drove the entire Mississippi Blues Highway (Highway 61), stopping at various historical markers along the way, including the legendary "Crossroads." &#127926;</p>
             <p>I once took a road-trip on a whim with my rescue cat Jim, from Houston, Texas, to the summit of Pikes Peak (14,115'), Colorado (perfectly sane...).  Jim has since passed on, but fun memories like this I will cherish forever!:</p>
 
