center "thanks for stopping by" text on home page

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <p>An avid runner, I competed on my college's cross country and track teams, and have completed over 20 marathons, 10x50-milers, and one 105-mile ultra-marathon.</p>
         <p>I love the parallels between coding and ultra-running. Both are a matter of problem solving, and breaking down seemingly huge obstacles into their most basic components, until they become entirely manageable.  I love this process, and the feeling of achievement that comes from it.</p>
         <p>I would love to hear from you, so please feel free to shoot me an email or leave a comment.</p>
-        <p>Thanks for stopping by!</p>
+        <p class="centered-home-text">Thanks for stopping by!</p>
 
         <div class="social-media-icons">
             <a href="https://www.linkedin.com/in/smith-scarborough/" target="_blank"><img src="./img/iconfinder_1_Linkedin_unofficial_colored_svg_5296501.png"></a>
