minor change to text on about page

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
     <div class="entry-content container justify-content-center">
             <h6 class="about-subheader text-center">Work Stuff</h6>
             <p>I am a recent graduate of DigitalCrafts software engineering bootcamp in Houston, Texas, where I formally learned the ins and outs of fullstack web development.</p>
-            <p>Previously, I was in college admissions (sales), where I tripled the enrollment of students ($8.56 million in revenue) attending from the Rio Grande Valley, the lowest socioeconomic region of Texas, in two years' time.</p>
+            <p>Previously, I was in college admissions (sales), where I tripled the enrollment of students ($8.56 million in revenue) from the Rio Grande Valley, the lowest socioeconomic region of Texas, in two years' time.</p>
             <p>See my full resume <a href="https://www.linkedin.com/in/smith-scarborough/">here.</a></p>
             <h6 class="about-subheader text-center">Fun Facts</h6>
             <p>Once upon a time, my car broke down the night before my first day of a new job, in a new town, and so I ended up running 30 miles in to work that next morning!  As if that weren't enough, I did it all while carrying a backpack full of my work stuff (i.e. khakis, dress shoes, toiletries, notepads, etc.).  Hands down the best sleep of my life that night!</p>
