minor change to text on about page

--- a/code.html
+++ b/code.html
@@ -194,7 +194,7 @@
               <div class="swiper-slide">
                 <div class="testimonial-wrap">
                   <div class="testimonial">
-                    <h5>Languages and Technologies:</h5>
+                    <h5>Languages and Technologies</h5>
                     <p></p>
                     <img src="./img/icons/icons8-html-5-144.png" alt="HTML5 logo" class="img-fluid">
                     <img src="./img/icons/icons8-css3-144.png" alt="CSS3 logo" class="img-fluid">
