minor change to about page text

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     <br>
     <div class="entry-content container justify-content-center">
             <h6 class="about-subheader text-center">Work Stuff</h6>
-            <p>I am a graduate of DigitalCrafts software engineering bootcamp in Houston, Texas, where I formally learned the ins and outs of full stack web development.</p>
+            <p>I am a graduate of DigitalCrafts Software Engineering Bootcamp in Houston, Texas, where I formally learned the ins and outs of full stack web development.</p>
             <p>Previously, I was in university admissions (recruiting), where I tripled the enrollment of students ($8.56 million in revenue) from the Rio Grande Valley, the lowest socioeconomic region of Texas, in two years' time.</p>
             <p>See my full resume <a href="https://docs.google.com/document/d/e/2PACX-1vSFmpVpWyrMdaJYF3dTP8FTqXm7Il0SWwEm6qo83XBYIRpu1kWrU7ty0XXq-zP-CoWdGzpBpyq4QSzF/pub" target="_blank">here</a>.</p>
             <h6 class="about-subheader text-center">Fun Facts</h6>
