--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <p class="centered-home-text">Thanks for stopping by!</p>
 
         <div class="social-media-icons">
-            <a href="./img/Smith Scarborough's Résumé.pdf" download><img src="./img/icons/icons8-cv-48.png"</a>
+            <a href="./resume.pdf" download><img src="./img/icons/icons8-cv-48.png"</a>
             <a href="https://github.com/smithscarborough" target="_blank"><img src="./img/iconfinder_github_291716.png"</a>
             <a href="https://www.linkedin.com/in/smith-scarborough/" target="_blank"><img src="./img/iconfinder_1_Linkedin_unofficial_colored_svg_5296501.png"></a>
             <!-- <a href="https://www.instagram.com/smiffmo/?hl=en" target="_blank"><img src="./img/iconfinder_1_Instagram_colored_svg_1_5296765.png"></a> -->
