minor change to about page

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             <p>One time, my car broke down the night before my first day of a new job--in a new town--and so I ended up running 30 miles in to work that next morning.  As if that weren't enough, I did it all while carrying a backpack full of my work stuff (i.e. khakis, dress shoes, toiletries, notepads, etc.).  Hands down the best night's sleep of my life was had that night!</p>
             <p>In 2009, I did a Semester at Sea, sailing around the world in 108-days with ports-of-call in the Bahamas, Spain, Gilbraltar, Morocco, the Canary Islands, Senegal, Namibia, South Africa, Mauritius, India, Thailand, Cambodia, Vietnam, China, Japan, Hawaii, Guatemala, and the Panama Canal.</p>
             <p>I love playing the guitar and learning about blues music history.  I once drove the entire Mississippi Blues Highway (Highway 61), stopping at various historical markers along the way, including the legendary "Crossroads." &#127926;</p>
-            <p>I once took a spontaneous road-trip with my rescue cat Jim, from Houston, Texas, to the summit of Pikes Peak (14,115'), Colorado (perfectly sane...).  Jim has since passed on, but our fun memories like this I will cherish forever!</p>
+            <p>I once took a spontaneous road-trip with my rescue cat Jim, from Houston, Texas, to the summit of Pikes Peak (14,115'), Colorado (perfectly sane...).  Jim has since passed on, but fun memories like this I will cherish forever!</p>
 
         <div class="text-center container">
             <img class="roadtrip-image" src="./img/jim_new_mexico.jpg" alt="Smith and his cat Jim crossing the New Mexico State Line" width="300px">
