remove homepage video

--- a/index.html
+++ b/index.html
@@ -172,13 +172,13 @@
 </div>
 
 <div class="video-container">
-    <video class="home-video" controls autoplay loop">
+    <!-- <video class="home-video" controls autoplay loop">
     
         <source src="./img/big_bend_running_vid.mp4"
                 type="video/mp4">
     
         Sorry, your browser doesn't support embedded videos.
-    </video>
+    </video> -->
 </div>
 
 <div class="parallax-2">
