add mongodb icon to code page

--- a/code.html
+++ b/code.html
@@ -206,6 +206,7 @@
                     <img src="./img/icons/icons8-nodejs-144.png" alt="node.js logo" class="img-fluid">
                     <img src="./img/icons/icons8-postgresql-144.png" alt="PostgreSQL logo" class="img-fluid">
                     <img src="./img/icons/icons8-sql-144.png" alt="SQL logo" class="img-fluid">
+                    <img src="./img/mongo-db.png" alt="MongoDB logo" class="img-fluid">
                     <img src="./img/icons/icons8-json-144.png" alt="JSON logo" class="img-fluid">
                     <img src="./img/icons/icons8-api-144.png" alt="API logo" class="img-fluid">
                     <img src="./img/icons/icons8-git-144.png" alt="Git logo" class="img-fluid">
