minor change to title text on code page

--- a/code.html
+++ b/code.html
@@ -114,7 +114,7 @@
             </div>
           </div>  -->
 <div class="portfolio-title-container container">
-  <h2 class="code-title"> My latest projects</h2>
+  <h2 class="code-title">Latest projects</h2>
 
   <!-- <div class="code-page-social-media-icons">
     <a href="https://github.com/smithscarborough" target="_blank"><img src="./img/iconfinder_github_291716.png"</a>
