Minor changes to bio, resume, dates, etc.

--- a/index.html
+++ b/index.html
@@ -153,10 +153,11 @@
     <img class="home-image" src="./img/big_bend_running_pic.JPG" alt="Smith standing on the South Rim Trail, Big Bend National Park">
         <p class="hello-world centered-home-text"> Hello, World! </p>
         <p class="centered-home-text">My name is Smith. (Yes, it's my first name.)</p>
-        <p>I am a software engineer based in Houston, Texas, with a skill set focused on full stack web development (click <a href="./code.html">here</a> to check out some of my latest projects).  I have a degree in Creative Writing from Rhodes College in Memphis, Tennessee, as well as an MBA and software engineering certificate from a full stack coding bootcamp.</p>
+        <p>I am a sales engineer based in Houston, Texas, with a background in enterprise sales engineering, software engineering, and customer service. I am passionate about helping my enterprise clients solve their most complex business challenges so that they can do more of what they were trained to do, as opposed to getting bogged down by administrative tasks.</p>
+        <p>I have a software engineering certificate from a full stack coding bootcamp, as well as an MBA and bachelor's degree in Creative Writing from Rhodes College in Memphis, Tennessee.</p>
         <p>When I'm not turning coffee into code, you can probably find me outside running, exploring Big Bend National Park (pictured above), or doing my best Jimi Hendrix impersonation on my surf green Fender Stratocaster.</p>
-        <p>An avid runner, I competed on my college's cross country and track teams, and have completed over 20 marathons, 10x50-milers, and one 105-mile ultramarathon.</p>
-        <p>I love the parallels between coding and ultra-running. Both are a matter of problem solving, and breaking down seemingly huge obstacles into their most basic components, until they become entirely manageable.  I love this process, and the feeling of achievement that comes as a result.</p>
+        <p>An avid runner, I have completed over 20 marathons, 10x50-milers, and one 105-mile ultramarathon, in addition to competing on my college's cross country and track teams.</p>
+        <p>I love the parallels between enterprise solutions engineering and ultra-running. Both a matter of problem solving, and breaking down seemingly huge obstacles into their most basic components, until they become entirely manageable.  I love this process, and the feeling of achievement that comes as a result.</p>
         <p>I would love to hear from you, so please feel free to shoot me an email or leave a comment.</p>
         <p class="centered-home-text">Thanks for stopping by!</p>
 
@@ -182,7 +183,7 @@
 </div>
 
 <div class="parallax-2">
-    <p>&copy; Copyright 2021 Smith Scarborough. All Rights Reserved.</p>
+    <p>&copy; Copyright 2024 Smith Scarborough. All Rights Reserved.</p>
 </div>
 
     <div class="footer-flair"></div>
